--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 # Minimal requirements for SAML Flask app
+python-dotenv>=1.0.0
 Flask>=3.1.1
 python3-saml>=1.15.0
 Flask-Session>=0.8.0
-python-dotenv>=1.0.0
-#lxml>=5.4.0
-#xmlsec>=1.3.15
+lxml>=5.4.0
+xmlsec>=1.3.15
 cryptography>=45.0.2
