--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,19 @@
-# Minimal requirements for SAML Flask app
-python-dotenv>=1.0.0
-Flask>=3.1.1
-python3-saml>=1.15.0
-Flask-Session>=0.8.0
-lxml>=5.4.0
-xmlsec>=1.3.15
-cryptography>=45.0.2
+blinker==1.9.0
+cachelib==0.13.0
+cffi==1.17.1
+click==8.2.1
+colorama==0.4.6
+cryptography==45.0.4
+Flask==3.1.1
+Flask-Session==0.8.0
+isodate==0.7.2
+itsdangerous==2.2.0
+Jinja2==3.1.6
+lxml==5.4.0
+MarkupSafe==3.0.2
+msgspec==0.19.0
+pycparser==2.22
+python-dotenv==1.1.0
+python3-saml==1.16.0
+Werkzeug==3.1.3
+xmlsec==1.3.15
