--- a/.github/workflows/main_socratescoach-saml.yml
+++ b/.github/workflows/main_socratescoach-saml.yml
@@ -24,6 +24,11 @@ jobs:
         with:
           python-version: '3.11'
 
+      - name: Install system dependencies (for xmlsec)
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libxml2-dev libxmlsec1-dev pkg-config
+
       - name: Create and start virtual environment
         run: |
           python -m venv venv
