--- a/.github/workflows/main_socratescoach-saml.yml
+++ b/.github/workflows/main_socratescoach-saml.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Install system dependencies (for xmlsec)
         run: |
           sudo apt-get update
-          sudo apt-get install -y libxml2-dev libxmlsec1-dev pkg-config
+          sudo apt-get install -y build-essential python3-dev pkg-config libxml2-dev libxslt1-dev libxmlsec1-dev libxmlsec1-openssl && rm -rf /var/lib/apt/lists/*
 
       - name: Create and start virtual environment
         run: |
