--- a/.github/workflows/main_pythondemoxml.yml
+++ b/.github/workflows/main_pythondemoxml.yml
@@ -24,6 +24,12 @@ jobs:
         with:
           python-version: '3.11'
 
+      
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libxml2-dev libxmlsec1-dev libxmlsec1 pkg-config
+
       - name: Create and start virtual environment
         run: |
           python -m venv venv
