--- a/.github/workflows/main_socratescoach-saml.yml
+++ b/.github/workflows/main_socratescoach-saml.yml
@@ -1,114 +1,68 @@
-name: Build and deploy Python app to Azure Web App - socratescoach-saml
+name: Build and deploy Python app to Azure Web App -pythondemoxml
 
 on:
-
   push:
-
     branches:
-
       - main
-
   workflow_dispatch:
 
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
-
     permissions:
-
-      contents: read # This is required for actions/checkout
+      contents: read
 
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      - uses: actions/checkout@v4
-
-      - name: Set up Python version
-
+      - name: Set up Python
         uses: actions/setup-python@v5
-
         with:
-
           python-version: '3.11'
 
       - name: Install system dependencies for xmlsec
-
         run: |
-
           sudo apt-get update
-
           sudo apt-get install -y libxml2-dev libxmlsec1-dev libxmlsec1-openssl pkg-config build-essential libtool python3-dev
 
-      - name: Create and start virtual environment
-
+      - name: Create and activate virtual environment
         run: |
-
           python -m venv venv
-
           source venv/bin/activate
-
-      - name: Install dependencies
-
-        run: |
-
-          source venv/bin/activate
-
           pip install --upgrade pip setuptools wheel
-
           pip install -r requirements.txt
 
-      # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
-
       - name: Zip artifact for deployment
+        run: zip -r release.zip . -x "venv/*"
 
-        run: zip release.zip ./* -r
-
-      - name: Upload artifact for deployment jobs
-
+      - name: Upload artifact for deployment
         uses: actions/upload-artifact@v4
-
         with:
-
           name: python-app
-
-          path: |
-
-            release.zip
-
-            !venv/
+          path: release.zip
 
   deploy:
-
     runs-on: ubuntu-latest
-
     needs: build
 
     steps:
-
       - name: Download artifact from build job
-
         uses: actions/download-artifact@v4
-
         with:
-
           name: python-app
 
       - name: Unzip artifact for deployment
-
         run: unzip release.zip
-    
-      - name: 'Deploy to Azure Web App'
 
-        uses: azure/webapps-deploy@v3
-
-        id: deploy-to-webapp
-
+      - name: Azure Login
+        uses: azure/login@v1
         with:
+          creds: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_DDAC869D424C459D8404C3C417F6912C }}
 
+      - name: Deploy to Azure Web App
+        uses: azure/webapps-deploy@v3
+        with:
           app-name: 'pythondemoxml'
-
           slot-name: 'Production'
-
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_DDAC869D424C459D8404C3C417F6912C }}
- 
