--- a/.github/workflows/main_socratescoach-saml.yml
+++ b/.github/workflows/main_socratescoach-saml.yml
@@ -10,7 +10,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read # Required for actions/checkout
+      contents: read
 
     steps:
       - uses: actions/checkout@v4
@@ -45,6 +45,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
+
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
@@ -53,11 +54,6 @@ jobs:
 
       - name: Unzip artifact for deployment
         run: unzip release.zip
-
-      - name: Azure Login
-        uses: azure/login@v1
-        with:
-          creds: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_79B709365CB5464C890271A636B7743D }}
 
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
